# Sdl3ComputeDct

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Src/: Main.cpp  cs.hlsl  fs.hlsl  vs.hlsl
